--- a/templates/media_list_directory.html
+++ b/templates/media_list_directory.html
@@ -2,41 +2,48 @@
 <html>
 <head>
     <title>Media List - {{ directory }}</title>
-    <style>
-        /* Define a grid layout */
-        .image-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); /* Automatically fit images in columns */
-            gap: 20px; /* Gap between images */
-        }
-    </style>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
     <h1>Media List - {{ directory }}</h1>
-    <div class="image-grid">
-        {% for file in files %}
-        <div>
-            <a href="/media/{{ directory }}/{{ file }}">
-                {% if file|lower|endswith(['.jpg', '.png', '.jpeg']) %}
-                    <img src="/media/{{ directory }}/{{ file }}" alt="{{ file }}" height="100">
-                {% else %}
-                    {{ file }}
-                {% endif %}
-            </a>
+    <div class="container">
+        <div class="row">
+            {% for file in files %}
+            <div class="col-md-3">
+                <a href="/media/{{ directory }}/{{ file }}">
+                    {% if file|lower|endswith(['.jpg', '.png', '.jpeg']) %}
+                        <img src="/media/{{ directory }}/{{ file }}" alt="{{ file }}" class="img-thumbnail">
+                    {% else %}
+                        {{ file }}
+                    {% endif %}
+                </a>
+            </div>
+            {% endfor %}
         </div>
-        {% endfor %}
     </div>
     
-    <div class="pagination">
-        {% if page > 1 %}
-            <a href="/media/{{ directory }}?page={{ page - 1 }}&per_page={{ per_page }}">Previous</a>
-        {% endif %}
-        
-        Page {{ page }} of {{ total_pages }}
-        
-        {% if page < total_pages %}
-            <a href="/media/{{ directory }}?page={{ page + 1 }}&per_page={{ per_page }}">Next</a>
-        {% endif %}
-    </div>
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+            {% if page > 1 %}
+                <li class="page-item">
+                    <a class="page-link" href="/media/{{ directory }}?page={{ page - 1 }}&per_page={{ per_page }}" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
+            {% endif %}
+            
+            <li class="page-item disabled">
+                <span class="page-link">Page {{ page }} of {{ total_pages }}</span>
+            </li>
+            
+            {% if page < total_pages %}
+                <li class="page-item">
+                    <a class="page-link" href="/media/{{ directory }}?page={{ page + 1 }}&per_page={{ per_page }}" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+            {% endif %}
+        </ul>
+    </nav>
 </body>
 </html>
