--- a/templates/media_list_directory.html
+++ b/templates/media_list_directory.html
@@ -1,4 +1,3 @@
-<!-- media_list_directory.html -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,23 +7,27 @@
         .image-with-border {
             margin: 10px;
             padding: 5px;
-            border-width: 3px; /* Add border width for better visibility */
-            border-style: solid; /* Add border style */
-            position: relative; /* Add relative positioning to the container */
-            display: inline-block; /* Display inline to fit the content */
+            border-width: 3px;
+            border-style: solid;
+            position: relative;
+            display: inline-block;
         }
         .bottom-text {
             font-size: 12px;
         }
         .image-thumbnail {
-            max-width: 100%; /* Ensure the image fits within the container */
-            height: auto; /* Maintain the aspect ratio of the image */
+            max-width: 100%;
+            height: auto;
+        }
+                .black-border {
+            border-color: #000000;
         }
     </style>
 </head>
 <body>
     <h1>Media List - {{ directory }}</h1>
     <div class="container">
+        <button class="btn btn-primary calculate-similarity-btn">Calculate Similarity</button>
         <div class="row">
             {% for file in files %}
             <div class="col-md-3">
@@ -32,7 +35,7 @@
                     <a href="/media/{{ directory }}/{{ file['name'] }}">
                         {% if file['name']|lower|endswith(['.jpg', '.png', '.jpeg']) %}
                             <img src="/media/{{ directory }}/{{ file['name'] }}" alt="{{ file['name'] }}" class="image-thumbnail">
-                            <div class="bottom-text">{{file['similarity']}}</div> <!-- Updated class name here -->
+                            <div class="bottom-text">{{file['similarity']|default('0.0')}}</div>
                         {% else %}
                             {{ file['name'] }}
                         {% endif %}
@@ -66,5 +69,29 @@
             {% endif %}
         </ul>
     </nav>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $(".calculate-similarity-btn").click(function () {
+                $(".image-with-border").each(function () {
+                    var imageContainer = $(this);
+                    var mediaPath = imageContainer.find('img').attr('src');
+                    var similarityValueElement = imageContainer.find(".bottom-text");
+                    similarityValueElement.html("Calculating similarity...");
+                    $.get("/calculate_similarity", { media_path: mediaPath }, function (data) {
+                        similarityValueElement.text("Similarity: " + data.similarity.toFixed(2));
+                        if (data.similarity <= 0.5) {
+                            imageContainer.css("border-color", "#FF0000"); // Change to red border
+                        } else if (data.similarity === 0.0) {
+                            imageContainer.css("border-color", "#000000"); // Default black border
+                        } else {
+                            imageContainer.css("border-color", "#0000FF"); // Change to blue border
+                        }
+                    });
+                });
+            });
+        });
+    </script>    
 </body>
 </html>
